[gd_scene load_steps=4 format=2]

[ext_resource path="res://wateringHUD.gd" type="Script" id=1]
[ext_resource path="res://minigame_assets/background.png" type="Texture" id=2]
[ext_resource path="res://minigame_assets/trial_theme.tres" type="Theme" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -40.0
margin_top = -28.0
margin_right = 495.0
margin_bottom = 754.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_top = 218.0
margin_right = 480.0
margin_bottom = 288.0
theme = ExtResource( 4 )
text = "Catch 7 Droplets"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="."]
margin_top = 157.0
margin_right = 480.0
margin_bottom = 227.0
theme = ExtResource( 4 )
text = "holder"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
visible = false
anchor_right = 0.819
margin_left = 437.193
margin_top = -1.25993
margin_right = 84.0726
margin_bottom = 12.7401
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.111
anchor_bottom = 0.109
margin_left = 197.408
margin_top = 338.0
margin_right = 255.128
margin_bottom = 375.52
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 111.0
margin_bottom = 56.0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 111.0
margin_bottom = 116.0
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.111
anchor_bottom = 0.109
margin_left = 156.975
margin_top = 338.0
margin_right = 256.695
margin_bottom = 375.52
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="VBoxContainer2"]
margin_right = 153.0
margin_bottom = 56.0
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="VBoxContainer2"]
margin_top = 60.0
margin_right = 153.0
margin_bottom = 116.0
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="VBoxContainer/StartButton" to="." method="_on_Start_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/ExitButton" to="." method="_on_Exit_Button_button_up"]
[connection signal="button_up" from="VBoxContainer2/restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="VBoxContainer2/quit" to="." method="_on_Exit_Button_button_up"]
